# chat-server

./: .env.example  .gitignore  API_REFERENCE.md  Dockerfile  README.md  compose.yaml  fastapi-chat-server-punch-TSD.md  implementation_details_and_setup.md  manage.py  pyproject.toml  users.acl.example
DjangoChannelsChatApp-main/: README.md  SPECIFICATION.md  db.sqlite3
DjangoChannelsChatApp-main/ChatApp/: consumers.py  urls.py  views.py
DjangoChannelsChatApp-main/ChatApp/templates/: dashboard.html
DjangoChannelsChatApp-main/ChatProject/: settings.py
DjangoChannelsChatApp-main/accounts/: models.py  urls.py  views.py
DjangoChannelsChatApp-main/templates/: login.html  register.html
app/: main.py
app/cache/: __init__.py  keys.py  tokens.py  websockets.py
app/controllers/: __init__.py  admin.py  auth.py  base.py  messaging.py  websocket.py
app/database/: __init__.py  run_migrations.py  seed.py
app/database/migrations/: 001_create_users_table.py  002_create_refresh_tokens_table.py  (+6 more)
app/dependencies/: cache.py  database.py
app/models/: __init__.py  base.py  messaging.py  user.py
app/services/: __init__.py  admin.py  auth.py  base.py  messaging.py
app/templates/: password_reset.html
app/utils/: config.py  email.py  guards.py  jwts.py
app/views/: __init__.py  admin.py  auth.py  base.py  messaging.py  responses.py  user.py
app/websocket/: __init__.py  handler.py  manager.py
be_test/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
client/: api.js  app.js  index.html  reset-password.html  run_client_server.py  styles.css  websocket.js
(+4 files in other folders)
