[tool.poetry]
name = "punch-chat-server-app"
version = "0.1.0"
description = ""
authors = ["Merrick1307 <holuworley.yz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
pydantic = "^2.12.5"
fastapi = "^0.128.0"
python-multipart = "^0.0.21"
asyncpg = "^0.31.0"
python-dotenv = "^1.2.1"
redis = {version = "^5.2.0", extras = ["hiredis"]}
yoyo-migrations = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
